--- a/src/AudioSharp.App/Styles/app.css
+++ b/src/AudioSharp.App/Styles/app.css
@@ -80,6 +80,28 @@ main {
     margin: 0 auto;
 }
 
+.nav-scrollable .nav-item .nav-link {
+    color: #d7d7d7;
+    background: none;
+    border: none;
+    border-radius: 4px;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    line-height: 3rem;
+    width: 100%;
+}
+
+.nav-scrollable .nav-item .nav-link.active {
+    background-color: rgba(255, 255, 255, 0.37);
+    color: #fff;
+}
+
+.nav-scrollable .nav-item .nav-link:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #fff;
+}
+
 h1, h2 {
     font-family: 'DM Serif Display', 'Times New Roman', serif;
     letter-spacing: 0.01em;
