Replace custom recorder with RecordRTC (WAV/16k)

--- a/src/AudioSharp.App/Components/App.razor
+++ b/src/AudioSharp.App/Components/App.razor
@@ -18,6 +18,7 @@
     <Routes />
     <ReconnectModal />
     <script src="@Assets["_framework/blazor.web.js"]"></script>
+    <script src="@Assets["lib/recordrtc/recordrtc.min.js"]"></script>
     <script src="@Assets["js/audio-recorder.js"]"></script>
 </body>
 
